Restructure documentation. Add caption names table.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /catalan.pdf
 /catalan.dvi
 /catalan.ldf
+/catalan.ilg
+/catalan.toc
+/catalan.glo
+/catalan.gls
+/catalan.ind
+/catalan.out
+/gglo.ist
