Add automated regression testing using l3build. Fix spacing bug in \today.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-/catalan.aux
-/catalan.log
-/catalan.pdf
-/catalan.dvi
+/build
 /catalan.ldf
-/catalan.ilg
-/catalan.toc
-/catalan.glo
-/catalan.gls
-/catalan.ind
-/catalan.out
-/gglo.ist
+*.out
+*.aux
+*.log
+*.pdf
+*.dvi
+*.ilg
+*.toc
+*.glo
+*.gls
+*.ind
+*/gglo.ist
