--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 /build
 /catalan.ldf
-*.out
-*.aux
-*.log
-*.pdf
-*.dvi
-*.ilg
-*.toc
-*.glo
-*.gls
-*.ind
+/*.out
+/*.aux
+/*.log
+/*.pdf
+/*.dvi
+/*.ilg
+/*.toc
+/*.glo
+/*.gls
+/*.ind
+/*.synctex.gz
 */gglo.ist
